# LibroRecomiendaDB

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  collect_snapshot.py  langraph.txt  main.py  project_snapshot.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
migrations/: env.py
migrations/versions/: 1cd69fecdb03_añadir_columna_cover_image_url_a_books.py  3066cc73b616_add_is_deleted_column_to_reviews_for_.py  4a1402d984cd_refine_models_relationships_constraints_.py  c8471deb31a9_add_isbn_column_to_books_table.py  d47497c2b47e_crear_tablas_iniciales_book_user_review_.py
scripts/: generate_fake_data.py  populate_db.py
src/librorecomienda/agents/: graph.py  state.py  tools.py
src/librorecomienda/clients/: google_books.py
src/librorecomienda/core/: config.py  security.py
src/librorecomienda/crud/: __init__.py  crud_book.py  crud_review.py  crud_user.py
src/librorecomienda/db/: session.py
src/librorecomienda/models/: __init__.py  book.py  review.py  user.py
src/librorecomienda/schemas/: review.py  user.py
streamlit_app/: app.py
streamlit_app/pages/: admin.py  chat.py
tests/: conftest.py
tests/crud/: test_crud_review.py  test_crud_user.py
tests/models/: test_book_model.py  test_review_model.py  test_user_model.py
